# Kingdoms

./: .gitignore  ArrayInformation.cpp  ArrayInformation.h  CMakeLists.txt  GenerateWorld.cpp  GenerateWorld.h  Keyboard.cpp  Keyboard.h  LoadGame.cpp  LoadGame.h  Location.h  Menu.h  Move.cpp  Move.h  README.md  Unit.h  main.cpp
save_game/: cityNames.txt  playerColors.txt  unitStats.txt
save_game/Basic/: gameInformation.txt  locations.txt  roads.txt
save_game/Basic1/: gameInformation.txt  locations.txt  units.txt  world.txt
save_game/Fight/: gameInformation.txt  locations.txt  roads.txt  units.txt  world.txt
save_game/Victory/: gameInformation.txt  locations.txt  roads.txt  units.txt  world.txt
